--- a/imports/client/admin/admin.html
+++ b/imports/client/admin/admin.html
@@ -59,7 +59,7 @@
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each wikiPages}}
-                                    <li role="presentation">
+                                    <li class="dropdown-item" role="presentation">
                                         <a href="#" role="menuitem" data-name="wikiStart" data-id="{{_id}}">{{name}}</a>
                                     </li>
                                     {{/each}}
@@ -72,7 +72,7 @@
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each wikiPages}}
-                                    <li role="presentation">
+                                    <li class="dropdown-item" role="presentation">
                                         <a href="#" role="menuitem" data-name="wikiPractice" data-id="{{_id}}">{{name}}</a>
                                     </li>
                                     {{/each}}
@@ -85,7 +85,7 @@
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each wikiPages}}
-                                    <li role="presentation">
+                                    <li class="dropdown-item" role="presentation">
                                         <a href="#" role="menuitem" data-name="wikiImpressum" data-id="{{_id}}">{{name}}</a>
                                     </li>
                                     {{/each}}
@@ -98,7 +98,7 @@
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each wikiPages}}
-                                    <li role="presentation">
+                                    <li class="dropdown-item" role="presentation">
                                         <a href="#" role="menuitem" data-name="wikiDatenschutz" data-id="{{_id}}">{{name}}</a>
                                     </li>
                                     {{/each}}
@@ -111,7 +111,7 @@
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each wikiPages}}
-                                    <li role="presentation">
+                                    <li class="dropdown-item" role="presentation">
                                         <a href="#" role="menuitem" data-name="wikiHelp" data-id="{{_id}}">{{name}}</a>
                                     </li>
                                     {{/each}}
@@ -127,7 +127,7 @@
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
                                     {{#each designs}}
-                                    <li role="presentation">
+                                    <li class="dropdown-item" role="presentation">
                                         <a href="#" role="menuitem" class="action-select-design">{{this}}</a>
                                     </li>
                                     {{/each}}
