--- a/imports/client/forms/address.html
+++ b/imports/client/forms/address.html
@@ -4,14 +4,14 @@
         <div class="col-12 col-sm-6 col-md-5 col-lg-4">
             <div class="form-horizontal">
                 <div class="form-group {{#if afFieldIsInvalid name='address.country'}}has-error{{/if}}" data-required="true">
-                    <label class="col-form-label col-sm-3">{{afFieldLabelText name="address.country"}}</label>
-                    <div class="col-sm-9 dropdown-country dropdown">
+                    <label class="col-form-label col-12 col-lg-3">{{afFieldLabelText name="address.country"}}</label>
+                    <div class="col-lg-9 col-12 dropdown-country dropdown">
                         <div class="input-group" data-toggle="dropdown">
                             <input value="Deutschland" class="form-control address-country-search" autocomplete="off" />
                         </div>
                         <ul class="dropdown-menu">
                             {{#each countrySearchResults}}
-                                <li role="presentation">
+                                <li class="dropdown-item" role="presentation">
                                     <a href="#" title="{{name}}" class="country-select" >
                                         <img src="/icons/countries/{{_id}}.png" alt="{{address.country}}" title="{{name}}" style="height:20px;"/>
                                         {{name}}
@@ -23,14 +23,14 @@
                     </div>
                 </div>
                 <div class="form-group {{#if afFieldIsInvalid name='address.city'}}has-error{{/if}}" data-required="true">
-                    <label class="col-form-label col-sm-3">{{afFieldLabelText name="address.city"}}</label>
-                    <div class="col-sm-9 dropdown-city dropdown">
+                    <label class="col-form-label col-12 col-lg-3">{{afFieldLabelText name="address.city"}}</label>
+                    <div class="col-lg-9 col-12 dropdown-city dropdown">
                         <div class="input-group" data-toggle="dropdown">
                             {{> afFieldInput name="address.city" autocomplete="off"}}
                         </div>
                         <ul class="dropdown-menu">
                             {{#each citySearchResults}}
-                                <li role="presentation">
+                                <li class="dropdown-item" role="presentation">
                                     <a href="#" title="{{name}}" class="city-select" >
                                         {{name}}
                                     </a>
@@ -40,20 +40,20 @@
                     </div>
                 </div>
                 <div class="form-group {{#if afFieldIsInvalid name='address.postcode'}}has-error{{/if}}" data-required="false">
-                    <label class="col-form-label col-sm-3">{{afFieldLabelText name="address.postcode"}}</label>
-                    <div class="col-sm-4">
+                    <label class="col-form-label col-6 col-lg-3">{{afFieldLabelText name="address.postcode"}}</label>
+                    <div class="col-12 col-lg-6">
                     {{> afFieldInput name="address.postcode" size="5" class="form-control" }}
                     </div>
                 </div>
                 <div class="form-group {{#if afFieldIsInvalid name='address.street'}}has-error{{/if}}" data-required="false">
-                    <label class="col-form-label col-sm-3">{{afFieldLabelText name="address.street"}}</label>
-                    <div class="col-sm-9 dropdown-street dropdown">
+                    <label class="col-form-label col-6 col-lg-3">{{afFieldLabelText name="address.street"}}</label>
+                    <div class="col-12 col-lg-9 dropdown-street dropdown">
                         <div class="input-group" data-toggle="dropdown">
                             {{> afFieldInput name="address.street" class="form-control address-street" autocomplete="off"}}
                         </div>
                         <ul class="dropdown-menu">
                             {{#each streetSearchResults}}
-                                <li role="presentation">
+                                <li class="dropdown-item" role="presentation">
                                     <a href="#" title="{{display_name}}" class="street-select" >
                                         {{display_name}}
                                     </a>
