--- a/imports/client/user/user.html
+++ b/imports/client/user/user.html
@@ -134,28 +134,28 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Tel. Mobil</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Tel. Privat</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Tel. Arbeit</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">E-Mail</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Konto (IBAN)</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Twitter</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Adresse</a>
                                         </li>
-                                        <li>
+                                        <li class="dropdown-item">
                                             <a data-index="{{index}}" href="#">Webseite</a>
                                         </li>
                                     </ul>
@@ -188,7 +188,7 @@
                                     </button>
                                     <ul class="dropdown-menu" role="menu">
                                         {{#each settings.arrayClubStates}}
-                                        <li><a href="#" class="dropdown-select-item" data-value="{{this}}" data-name="club.state">{{this}}</a></li>
+                                        <li class="dropdown-item"><a href="#" class="dropdown-select-item" data-value="{{this}}" data-name="club.state">{{this}}</a></li>
                                         {{/each}}
                                     </ul>
                                 </div>
