--- a/imports/client/tournaments/tournament.html
+++ b/imports/client/tournaments/tournament.html
@@ -94,18 +94,18 @@
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                        <li>
+                        <li class="dropdown-item">
                             <a title="Team anlegen" class="action-add-team">
                                 <span class="fa fa-group"></span><sub><span class="fa fa-plus"></span></sub> Team anlegen
                             </a>
                         </li>
-                        <li>
+                        <li class="dropdown-item">
                             <a title="Turnier editieren" class="action-edit-tournament" href="#">
                                 <span class="fa fa-edit"></span> Editieren
                             </a>
                         </li>
                         {{#unless teamObjects.length}}
-                        <li>
+                        <li class="dropdown-item">
                             <a title="Turnier löschen" type="button" class="tournament-remove" href="#">
                                 <span class="fa fa-trash"></span> löschen
                             </a>
